# SereniChat

./: .gitattributes  .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml  delete-merged-branches.yml  nodejs.yml  python.yml
src/: package-lock.json  package.json
src/backend/: pyproject.toml  requirements.txt
src/backend/app/: main.py  models.py
src/backend/app/api/: main.py
src/backend/app/api/routes/: emotions.py  items.py  organizations.py
src/backend/app/core/: config.py  db.py
src/backend/notes/: notes.md
src/frontend/: .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/actions/: getConversationById.ts  getConversations.ts  getCurrentUser.ts  getMessages.ts  getSession.ts  getUsers.ts
src/frontend/app/api/conversations/: route.ts
src/frontend/app/auth/: AuthForm.tsx  AuthSocialButton.tsx
src/frontend/app/components/: ActiveStatus.tsx  Avatar.tsx  AvatarGroup.tsx  Button.tsx  DesktopItem.tsx  DesktopSidebar.tsx  EmptyState.tsx  Footer.tsx  Input.tsx  LoadingModal.tsx  MobileFooter.tsx  MobileItem.tsx  Select.tsx  SettingsModal.tsx  Sidebar.tsx
src/frontend/app/context/: AuthContext.tsx  ToasterContext.tsx
src/frontend/app/conversations/: layout.tsx  loading.tsx  page.tsx
src/frontend/app/hooks/: useActiveChannel.ts  useActiveList.ts  useConversation.ts  useOtherUser.ts  useRoutes.ts
src/frontend/app/mental-organization/: page.tsx
src/frontend/app/mental-organization2/: page.tsx
src/frontend/app/modules/: prismadb.ts  pusher.ts
src/frontend/app/types/: index.ts
src/frontend/app/users/: layout.tsx  loading.tsx  page.tsx
src/frontend/prisma/: schema.prisma
(+45 files in other folders)
