[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
description = "the backend for serenichat using fastapi"
readme = "README.md"
dependencies = [
    "annotated-types = \"0.6.0\"",
    "anyio = \"4.3.0\"",
    "click = \"8.1.7\"",
    "fastapi = \"0.110.0\"",
    "h11 = \"0.14.0\"",
    "idna = \"3.6\"",
    "pydantic = \"2.6.3\"",
    "pydantic-core = \"2.16.3\"",
    "sniffio = \"1.3.1\"",
    "starlette = \"0.36.3\"",
    "toml = \"0.10.2\"",
    "typing-extensions = \"4.10.0\"",
    "uvicorn = \"0.27.1\""
]

requires-python = ">=3.8"
authors = [
    { name = "Teqwon Norman", email = "tenor1@morgan.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dynamic = ["version"]

